# strata-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PINS.md
strata/: __init__.py  cli.py  engine.py  ids.py
strata/canonical/: migrations.py  records.py  schema.sql  store.py
strata/coordinator/: coordinator.py  ops.py  schema.sql  worker.py
strata/deletion/: flows.py  managed_surfaces.py  verify.py
strata/gateway/: __init__.py  api.py  http.py
strata/lexical/: fts.py
strata/policy/: sensitivity.py
strata/reflection/: buffer.py  engine.py  proposals.py
strata/resolver/: bundle.py  diversity.py  resolver.py
strata/vector/: base.py  embedder.py  fake.py  turbovec_adapter.py  zvec_adapter.py
tests/adapters/: test_turbovec_adapter.py  test_zvec_adapter.py
tests/invariants/: _harness.py  conftest.py  test_deletion_invariant.py  test_hydration_invariant.py  test_migration_invariant.py  test_resolver_invariant.py  test_single_writer_invariant.py
tests/unit/: test_canonical_store.py  test_coordinator.py  test_deletion_flows.py  test_lexical_store.py  test_resolver.py  test_step9_integration.py
